fix(gtk320: toolbar): imagebutton spacing to make it square - 4

--- a/src/gtk-3.20/scss/widgets/_toolbar.scss
+++ b/src/gtk-3.20/scss/widgets/_toolbar.scss
@@ -32,7 +32,13 @@
         padding: 0 ($spacing * 2);
     }
 
-    button { @include button($bg, $fg); }
+    button {
+        @include button($bg, $fg);
+
+        &.image-button {
+            padding: $spacing;
+        }
+    }
 
     .linked > button { @include linked_button($bg, $fg); }
 
